--- a/public/index.html
+++ b/public/index.html
@@ -28,17 +28,23 @@
     <title>React App</title>
   </head>
   <body>
+    <header>
+      <h1>Margaret (Maggie) Delaney Portfolio</h1>
+    </header>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      Root HTML
     -->
+    <footer>
+      <ul id="footer-flex">
+        <li>
+            <a href="https://github.com/maggierdelaney">Github</a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/margaret-delaney-b492ab5a/">LinkedIn</a>
+        </li>
+    </ul>
+    </footer>
   </body>
 </html>
